# granite-completebench

./: .gitignore  NOTICE  README.md  evaluate-granite-benchmarks.sh  index.html  metrics.json  pyproject.toml  requirements.txt  run-granite-benchmarks-ollama.sh  run-granite-benchmarks.sh
.github/workflows/: publish.yaml
assets/: index-BrQD1YYq.js  index-Bsqzjpdl.js  index-ByE6IGHh.js  index-CM70Th5k.css
granite_completebench/: cli.py  eval_granite.py  eval_metric.py  eval_utils.py  evaluate.py  file_utils.py  generate_ollama.py  generate_vllm.py  granite_prompts.py  paths.py  postprocess.py  types.py  vllm_inference_granite.py
granite_completebench/postprocessors/: __init__.py  truncate_close.py  truncate_expression.py  truncate_suffix.py
samples/: manifest.json
samples/Qwen2.5-Coder-14B/java/inside/: outputs.jsonl
samples/Qwen2.5-Coder-14B/python/comment/: outputs.jsonl
samples/Qwen2.5-Coder-14B/python/inside/: outputs.jsonl
samples/Qwen2.5-Coder-14B/python/no_snippets/: outputs.jsonl
samples/Qwen2.5-Coder-14B/python/outside/: outputs.jsonl
samples/_/csharp/: inputs.jsonl
scripts/: eval_metric.py  granite_prompts.py  vllm_inference_granite.py
web/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.css  App.tsx  site.ts  types.ts  vite-env.d.ts
web/src/components/: About.tsx  Dropdown.tsx  InputDisplay.tsx  Metrics.tsx  MetricsTable.tsx  ResultDisplay.tsx  SampleDisplay.tsx  SampleSelector.tsx  Samples.tsx
web/src/utils/: fetchMetrics.ts  fetchSamples.ts
(+478 files in other folders)
